--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,25 +1,30 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "LT Creative",
+  "name": "LT Creative Portfolio",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "src": "apple_touch_icon.png",
+      "sizes": "180x153",
+      "type": "image/png"
     },
     {
-      "src": "logo192.png",
+      "src": "icons/apple_app_icon_144x144.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "144x123"
     },
     {
-      "src": "logo512.png",
+      "src": "android_touch_icon.png",
+      "sizes": "192x164",
+      "type": "image/png"
+    },
+    {
+      "src": "icons/android_app_icon.512x512.png",
       "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "512x437"
     }
   ],
-  "start_url": ".",
+  "start_url": "/",
   "display": "standalone",
-  "theme_color": "#000000",
+  "theme_color": "#242A35",
   "background_color": "#ffffff"
 }
